# tw3-menufilelist-updater

./: .gitignore  Cargo.toml  README.md  release.bat
filelists/: dx11filelist.txt  dx12filelist.txt
src/: constants.rs  error.rs  filelist.rs  lib.rs  main.rs  tests.rs
src/summary/: mod.rs
