[package]
name = "tw3-menufilelist-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["summary"]
summary = ["dep:eframe"]

#[lib]
#crate-type = ["cdylib"]

[dependencies]
eframe = { version = "^0.28.0", optional = true }
image = "0.24.8" # for the icon
